--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
         <link rel="stylesheet" href="css/mobile.css" type="text/css" />
         <link rel="stylesheet" href="css/tablet.css" type="text/css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
     </head>
     <body>
         <header>
@@ -211,7 +213,7 @@
                 </div>
                 <div class="footer-content pt-5 pb-5">
                     <div class="row">
-                        <div class="col-xl-3 col-lg-3 mb-50">
+                        <div class="col-xl-4 col-lg-4 col-sm-12 mb-50">
                             <div class="footer-widget">
                                 <div class="footer-logo">
                                     <a href="./index.html"><img src="./images/logo-4.png" class="img-fluid" alt="logo"></a>
@@ -224,7 +226,7 @@
                                
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 mb-30">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-30">
                             <div class="footer-widget">
                                 <div class="footer-widget-heading">
                                     <h3>Useful Links</h3>
@@ -242,7 +244,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6 mb-50">
+                        <div class="col-xl-2 col-lg-2 col-md-6  mb-50">
                             <div class="footer-widget">
                                 <div class="footer-widget-heading">
                                     <h3>Follow Us</h3>
