--- a/trainings/testing.html
+++ b/trainings/testing.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" href="../css/style.css" type="text/css">
 <link rel="stylesheet" href="../css/mobile.css" type="text/css">
 <link rel="stylesheet" href="../css/tablet.css" type="text/css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
 
 
 </head>
